# AI-asisstant

./: .gitignore  AI-assistant.cpp  CMakeLists.txt  DC_remote.cpp  device_connection.cpp  device_connection.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  voice_record.wav.txt
files/: config.cfg
include/: config.h  device_connection.h  kobold_client.h  log.h  recognizer.h  recorder.h  tts.h
src/: config.cpp  device_connection.cpp  kobold_client.cpp  log.cpp  recognizer.cpp  recorder.cpp  tts.cpp
